snapshots/parsers/cst/option_statements/option_compare_before_declarations.snap
---
source: src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: BinaryKeyword
          text: Binary
        - kind: Newline
          text: "\n"
    - kind: DimStatement
      children:
        - kind: DimKeyword
          text: Dim
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: str
        - kind: Whitespace
          text: " "
        - kind: AsKeyword
          text: As
        - kind: Whitespace
          text: " "
        - kind: StringKeyword
          text: String
        - kind: Newline
          text: "\n"
