snapshots/parsers/cst/option_statements/option_compare_text_case_insensitive_behavior.snap
---
source: src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: TextKeyword
          text: Text
        - kind: Newline
          text: "\n"
